--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
   assets:
     - lib/assets/images/welcomeScreen.svg
     - lib/assets/images/welcomeScreen2.png
+    - lib/assets/images/background2.png
+    - lib/assets/images/background.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
