--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.3
+  flutter_neumorphic: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,8 @@ flutter:
     - lib/assets/images/welcomeScreen2.png
     - lib/assets/images/background2.png
     - lib/assets/images/background.png
+    - lib/assets/images/discover.png
+    - lib/assets/images/back.png
     
     
 
