--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.3
   flutter_neumorphic: ^3.2.0
+  curved_navigation_bar: ^1.0.3
+ # google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
