--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg: ^1.0.3
   flutter_neumorphic: ^3.2.0
   curved_navigation_bar: ^1.0.3
+  http: ^0.13.4
+  percent_indicator: ^4.0.0
  # google_fonts: ^2.3.1
 
 dev_dependencies:
