--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   http: ^0.13.4
   percent_indicator: ^4.0.0
   material_dialogs: ^1.1.1
- # google_fonts: ^2.3.1
+  bottom_navy_bar: ^6.0.0
+  table_calendar: ^3.0.4
+  #google_fonts: ^2.3.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +75,8 @@ flutter:
     - lib/assets/images/background.png
     - lib/assets/images/discover.png
     - lib/assets/images/back.png
+    - lib/assets/images/profile.png
+    - lib/assets/images/profile1.jpg
     
     
 
